--- a/my-dz-project/src/style.css
+++ b/my-dz-project/src/style.css
@@ -1,6 +1,8 @@
 :root {
   --color-bg: #f0f4f8;
   --color-primary: #ffffff;
+  --color-secondary: #008bfe;
+  --color-light-blue: #cce8ff;
   --color-text: #000000;
   --color-card-inner-border: #cce8ff;
   --font: 'Roboto', sans-serif;
@@ -12,9 +14,8 @@
 
 body {
   background-color: var(--color-bg);
-  display: grid;
-  place-items: center;
   min-height: 100vh;
+  min-width: 100vw;
   font-family: var(--font);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
